--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,123 @@
-torch>=1.9.0
-pyworld
-matplotlib
-librosa
-tqdm
-pandas
-numba
-numpy
-requests
-scipy
-sympy
-PyYAML==5.3.1
-tensorboardX
-pillow
-pyloudnorm
-setuptools>=41.0.0
-g2p_en
-resemblyzer
-webrtcvad
-tensorboard
-scikit-learn
-scikit-image
-pypinyin
-textgrid
-jiwer
-pycwt
-PyWavelets
+absl-py==1.4.0
+ansiwrap==0.8.4
+appdirs==1.4.4
+attrs==22.1.0
+audioread==3.0.0
+biopython==1.79
+brotlipy==0.7.0
+cachetools==5.3.0
+calmsize==0.1.3
+certifi==2022.9.24
+cffi==1.15.1
+chardet==5.1.0
+charset-normalizer==2.1.1
+click==8.1.3
+colorama==0.4.6
+contourpy==1.0.7
+cryptography==38.0.3
+cycler==0.11.0
+Cython==0.29.33
+dataclassy==0.11.1
+decorator==5.1.1
+Distance==0.1.3
+einops==0.6.0
+filelock==3.9.0
+fonttools==4.38.0
+future==0.18.3
+g2p-en==2.1.0
+g2pM==0.1.2.5
+google-auth==2.16.0
+google-auth-oauthlib==0.4.6
+greenlet==2.0.1
+grpcio==1.51.1
+huggingface-hub==0.12.0
+idna==3.4
+imageio==2.25.0
+importlib-metadata==6.0.0
+inflect==6.0.2
+jieba==0.42.1
+jiwer==2.5.1
+joblib==1.2.0
+jsonlines==3.1.0
+kiwisolver==1.4.4
+Levenshtein==0.20.2
+librosa==0.9.2
+libtmux==0.21.0
+llvmlite==0.39.1
+Markdown==3.4.1
+MarkupSafe==2.1.2
+matplotlib==3.6.3
+mkl-fft==1.3.1
+mkl-random==1.2.2
+mkl-service==2.4.0
+Montreal-Forced-Aligner==2.0.0rc3
+mpmath==1.2.1
+munkres==1.1.4
+networkx==3.0
+nltk==3.8.1
+numba==0.56.4
+numpy==1.23.5
+oauthlib==3.2.2
+packaging==23.0
+pandas==1.5.3
+Pillow==9.2.0
+pip==22.3.1
+pooch==1.6.0
 praat-parselmouth==0.3.3
-jieba
-g2pM
-einops
-pytorch_memlab
-libtmux
-chardet
-rjieba
+praatio==5.1.1
+protobuf==3.20.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pycwt==0.3.0a22
+pydantic==1.10.4
+pyloudnorm==0.1.1
+pynini==2.1.5
+pyOpenSSL==22.1.0
+pyparsing==3.0.9
+pypinyin==0.48.0
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytorch-memlab==0.2.4
+pytz==2022.7.1
+PyWavelets==1.4.1
+pyworld==0.3.2
+PyYAML==6.0
+rapidfuzz==2.13.7
+regex==2022.10.31
+requests==2.28.1
+requests-oauthlib==1.3.1
+resampy==0.4.2
+Resemblyzer==0.1.1.dev0
+rjieba==0.1.11
+rsa==4.9
+scikit-image==0.19.3
+scikit-learn==1.1.3
+scipy==1.8.0
+setuptools==65.5.1
+six==1.16.0
+soundfile==0.11.0
+SQLAlchemy==1.4.44
+sympy==1.11.1
+tensorboard==2.11.2
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorboardX==2.5.1
+TextGrid==1.5
+textwrap3==0.9.2
+threadpoolctl==3.1.0
+tifffile==2023.1.23.1
+tokenizers==0.13.2
+torch==1.12.1
+torchaudio==0.12.1
+torchvision==0.13.1
+tqdm==4.64.1
+transformers==4.26.0
+typing==3.7.4.3
+typing_extensions==4.4.0
+unicodedata2==15.0.0
+urllib3==1.26.11
+webrtcvad==2.0.10
+Werkzeug==2.2.2
+wheel==0.38.4
+zipp==3.12.0
